Fixed horizontal scroll issues and minor UI tweaks

--- a/packages/web/src/global.css
+++ b/packages/web/src/global.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 p {
-  padding: 5px;
+  padding: 1rem;
   word-break: break-word;
   white-space: normal;
 }
